Adding inbox component

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -25,15 +25,19 @@
     class="ui red basic label"
   >
     <p *ngIf="authForm.errors.passwordsDontMatch">
-      Password and Password Confirmation must match.
+      Password and Password Confirmation must match
     </p>
-    <p *ngIf="authForm.errors.noConnection">No Connection, failed to signup!</p>
+    <p *ngIf="authForm.errors.noConnection">
+      No internet connection detected, failed to sign up
+    </p>
     <p *ngIf="authForm.errors.unknownError">
-      Failed to sign up! try again later
+      Failed to sign up
     </p>
   </div>
 
   <div>
-    <button class="ui submit button primary">Submit</button>
+    <button class="ui submit button primary">
+      Submit
+    </button>
   </div>
 </form>
