--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,31 @@
 <div class="ui container">
   <div class="ui secondary pointing menu">
     <a routerLink="/" class="item">Angular Email</a>
+
     <div class="right menu">
-      <ng-container *ngIf="signedIn$ | async">
-        <a routerLink="/inbox" class="ui item" routerLinkActive="active"
-          >Inbox</a
-        >
-        <a routerLink="/signout" class="ui item" routerLinkActive="active"
-          >ٍSign Out</a
-        >
+      <ng-container *ngIf="signedin$ | async">
+        <a class="ui item" routerLink="/inbox" routerLinkActive="active">
+          Inbox
+        </a>
+        <a class="ui item" routerLink="/signout" routerLinkActive="active">
+          Sign Out
+        </a>
       </ng-container>
-      <ng-container *ngIf="!(signedIn$ | async)">
+      <ng-container *ngIf="!(signedin$ | async)">
         <a
-          routerLink="/signin"
           class="ui item"
+          routerLink="/"
           [routerLinkActiveOptions]="{ exact: true }"
           routerLinkActive="active"
-          >Sign In</a
         >
-        <a routerLink="/signup" class="ui item" routerLinkActive="active"
-          >Sign Up</a
-        >
+          Sign In
+        </a>
+        <a class="ui item" routerLink="/signup" routerLinkActive="active">
+          Sign Up
+        </a>
       </ng-container>
     </div>
   </div>
+
   <router-outlet></router-outlet>
 </div>
